# nautilus-ops

./: .dockerignore  .gitignore  .nautilus.toml  Cargo.toml  Dockerfile
contracts/nautilus/: Move.toml  Published.toml  Published.toml.bak
contracts/nautilus/sources/: enclave.move
docs/: README.md
nautilus-cli/: Cargo.toml
nautilus-cli/src/: attest.rs  aws.rs  build.rs  config.rs  init.rs  init_ci.rs  logs.rs  main.rs  status.rs  sui_chain.rs
nautilus-enclave/: Cargo.toml
nautilus-enclave/src/: crypto.rs  lib.rs  nsm.rs
nautilus-sidecar/: Cargo.toml
nautilus-sidecar/src/: crypto.rs  main.rs  nsm.rs  vsock.rs
