[package]
name = "nautilus-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nautilus"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# AWS — feature-gated because aws-sdk-ec2 is enormous and OOM-kills on constrained machines
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-sdk-ec2 = { version = "1", optional = true }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
anyhow = "1"
thiserror = "1"
# Pretty output
colored = "2"
indicatif = "0.17"
# Hex encoding/decoding (used by attest.rs)
hex = "0.4"

[features]
default = []
aws = ["aws-config", "aws-sdk-ec2"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
