[package]
name = "nautilus-sidecar"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nautilus-sidecar"
path = "src/main.rs"

[dependencies]
# Core enclave primitives (Ed25519, NSM attestation)
nautilus-enclave = { path = "../nautilus-enclave" }

# VSOCK socket support (Linux only — the nitro enclave IS Linux)
vsock = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Hex encoding for pretty-printing
hex = "0.4"

# Terminal colors
colored = "2"

[features]
# Enable this feature when building for deployment inside an actual Nitro Enclave.
# Passes through to nautilus-enclave's nsm feature.
nsm = ["nautilus-enclave/nsm"]
